<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baj1">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="244dp"
        android:layout_height="289dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/ImageDescription"
        android:scaleType="centerInside"
        app:srcCompat="@mipmap/butterfly"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/Btn_sign"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Btn_LOGIN"
        android:layout_alignEnd="@+id/Btn_LOGIN"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="63dp"
        android:backgroundTint="@color/baj4"
        android:drawableBottom="@drawable/roundedborder"
        android:scaleType="centerInside"
        android:text="@string/Sign"
        android:textColor="@color/baj1" />

    <Button
        android:id="@+id/Btn_LOGIN"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="-30dp"
        android:layout_marginEnd="-33dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="@color/baj4"
        android:drawableBottom="@drawable/roundedborder"
        android:scaleType="centerInside"
        android:text="@string/log"
        android:textColor="@color/baj1" />

    <Button
        android:id="@+id/Admin_btn"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="13dp"
        android:backgroundTint="@color/baj4"
        android:drawableBottom="@drawable/roundedborder"
        android:text="@string/Admin"
        android:textColor="@color/baj1" />

</RelativeLayout>
