<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/signin_back"
    android:textAlignment="center"
    tools:context=".SignInActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="544dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="@color/opacity"
        app:cardCornerRadius="8dp"
        app:cardElevation="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="56dp"
                android:text="@string/Sign"
                android:textAlignment="center"
                android:textColor="@color/baj1"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_below="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_alignEnd="@+id/textView2"
                android:layout_marginStart="-25dp"
                android:layout_marginTop="114dp"
                android:layout_marginEnd="-24dp"
                android:background="@drawable/roundedborder"
                android:hint="@string/Email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:textColor="@color/baj1"
                android:textColorHint="@color/baj1"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_below="@+id/editEmail"
                android:layout_alignStart="@+id/editEmail"
                android:layout_alignEnd="@+id/editEmail"
                android:layout_marginStart="-1dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/roundedborder"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:textColor="@color/baj1"
                android:textColorHint="@color/baj1"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_below="@+id/textView2"
                android:layout_alignStart="@+id/editEmail"
                android:layout_alignEnd="@+id/editEmail"
                android:layout_marginStart="0dp"
                android:layout_marginTop="53dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/roundedborder"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="8dp"
                android:textColor="@color/baj1"
                android:textColorHint="@color/baj1"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/buttonSign"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPassword"
                android:layout_alignStart="@+id/editTextPassword"
                android:layout_alignEnd="@+id/editTextPassword"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="13dp"
                android:backgroundTint="@color/baj4"
                android:text="@string/Sign"
                android:textColor="@color/baj1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonSign"
                android:layout_alignStart="@+id/buttonSign"
                android:layout_alignEnd="@+id/buttonSign"
                android:layout_marginStart="-24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="-26dp"
                android:text="@string/sing_iother_method"
                android:textColor="@color/baj1"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageGoogle"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_alignEnd="@+id/textView3"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="197dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_alignEnd="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="28dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="29dp" />

            <TextView
                android:id="@+id/already"
                android:layout_width="178dp"
                android:layout_height="23dp"
                android:layout_below="@+id/imageGoogle"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="78dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="28dp"
                android:paddingTop="3dp"
                android:text="@string/already_have_account"
                android:textAlignment="center"
                android:textColor="@color/baj1"
                android:textSize="16sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>