<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logInActivity"
    android:background="@mipmap/logging">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="457dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/opacity_log"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="73dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="75dp"
                android:text="@string/welcome_back"
                android:textAlignment="center"
                android:textColor="@color/baj1"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/editEmailAddress"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="39dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="268dp"
                android:background="@drawable/roundedborder"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:textColor="@color/baj1"
                android:textColorHint="@color/baj1"
                tools:ignore="MissingConstraints,RtlSymmetry"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="157dp" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/editEmailAddress"
                android:layout_alignEnd="@+id/editEmailAddress"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="180dp"
                android:autofillHints=""
                android:background="@drawable/roundedborder"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:paddingStart="8dp"
                android:textColor="@color/baj1"
                android:textColorHint="@color/baj1"
                tools:ignore="RtlSymmetry"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="268dp" />

            <Button
                android:id="@+id/Btn_log"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/editPassword"
                android:layout_alignEnd="@+id/editPassword"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="91dp"
                android:backgroundTint="@color/baj4"
                android:drawableBottom="@drawable/roundedborder"
                android:scaleType="centerInside"
                android:text="@string/log"
                android:textColor="@color/baj1"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="360dp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>